# rl-sandbox

./: .gitignore  LICENSE  Makefile  README.md  eval_agents.py  integration_test.py  pyproject.toml  run_pong_experiments.py  train_pong.py  train_tuned.sh
configs/: selfplay_local.json
pong/: checkpoints.py  constants.py  env.py  paths.py  pixel_env.py
pong/strategy/: __init__.py  base.py  dense.py  multiball.py  pixel.py  pixel_multiball.py  selfplay_dense.py  simple.py
pong/utils/: __init__.py  timing.py
tests/: .pre-commit-config.yaml  conftest.py  test_dense_strategy.py  test_factory.py  test_paths.py  test_simple_strategy.py
